<resources>
    <string name="app_name">Reversi_PO</string>
    <string name="field">Field</string>
    <string name="board">Board</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="reversi">Reversi</string>
    <string name="no_move">Turn skipped!</string>
    <string name="restart">Please start a new game!</string>
    <string name="black_wins">You win!</string>
    <string name="white_wins">You lose!</string>
    <string name="ties">GAME DRAW!</string>
    <string name="newgame">Play again</string>
    <string name="turn">Turn:</string>
    <string name="save">Save settings</string>
    <string name="classic">Classic</string>
    <string name="pirate">Pirate</string>
    <string name="got">Game of Thrones</string>
    <string name="pawns">Please select pawn design:</string>
    <string name="time">Time left:</string>
    <string name="no_time">Time\'s up! You lost, try again!</string>
    <string name="time_set">Set time limit:</string>

    <string-array name="scales">
        <item>Please select board size</item>
        <item>90%</item>
        <item>80%</item>
        <item>50%</item>
    </string-array>
</resources>
