<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings"
    android:background="@drawable/wood">

    <Spinner
        android:id="@+id/scales"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:shadowColor="#2E2E2E"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/save"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/save" />

    <TextView
        android:id="@+id/textView3"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="@string/pawns" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp">
        <RadioButton
            android:id="@+id/classic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#000000"
            android:textSize="16sp"
            android:checked="true"
            android:text="@string/classic"
            />
        <RadioButton
            android:id="@+id/pirate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/pirate"
            />
        <RadioButton
            android:id="@+id/got"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/got"
            />

    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_gravity="center|top"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="@string/time_set" />

    <TextView
        android:id="@+id/displayTime"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="380dp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="" />

</FrameLayout>