<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/wood">

    <Button
        android:id="@+id/play"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_gravity="center|top"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/play"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/settings"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_gravity="center|top"
        android:background="@drawable/buttonshape"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/reversi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#2D2F31"
        android:textSize="80sp" />

</FrameLayout>